--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,7 @@ h2{
 #header .gnb:hover .depth2{
     height: 200px; 
     transition: 0.5s;
-    margin: 20px 0;
+    padding: 20px 0;
 }
 #header .gnb .depth2 a{
     display: block;
@@ -216,7 +216,8 @@ h2{
     position: relative;
 }
 #slide .slick-active img{
-    width: 100%;
+    height: 150%;
+    /* width: 100%; */
     transform: scale(2) translate(0, 100px); opacity: 0;
     animation: 7s main_img forwards;
 }
@@ -271,9 +272,9 @@ h2{
     width: 1200px;
     height: 120px;
     box-sizing: border-box;
-    position: absolute;
-    bottom: 54px;
-    left: 18%;
+    position: relative;
+    bottom: 120px;
+    margin: 0 auto;
 }
 #new.flex{
     justify-content: flex-start;
@@ -292,9 +293,7 @@ h2{
 }
 
 /*********************section1****************************/
-#section1{
-    padding-top: 100px;
-}
+
 #section1 h1{
     font-size: 2.7rem;
     font-weight: 700;
@@ -365,12 +364,13 @@ h2{
 #section2 .flex{
     justify-content: space-between;
     padding-top: 100px;
-    margin: 0 340px;
+    margin: 0 200px;
     position: relative;
 }
 #section2 .flex .left_tit{
     padding-top: 159px;
     width:50%;
+    margin-left: 50px;
 }
 
 #section2 .flex .left_tit h4{
@@ -392,9 +392,10 @@ h2{
 #section2 .flex .rigth_txt{
     position: relative;
     width: 50%;
+        right: -150px;
 }
 #section2 .flex .rigth_txt .img_count img{
-    width: 100%;
+    width: 80%;
     overflow: hidden;
 }
 
@@ -403,13 +404,13 @@ h2{
     text-align: center;
     padding-top: 50px;
     background-color: #7DC242;
-    width: 621px;
-    height: 342px;
+    width: 90%;
+    height: 50%;
     display: block;
     border-top-left-radius: 90px;
     position: absolute;
     bottom: -90px;
-    right: 150px;
+    right: 300px;
     z-index: 2;
 }
 #section2 .flex .rigth_txt2 .txt h4{
@@ -430,26 +431,26 @@ h2{
     display: block; 
     width:33px; 
     height:33px;
-    border-bottom:2px solid #a7a7a7;
-    border-right: 2px solid #a7a7a7; 
+    border-bottom:2px solid #666666;
+    border-right: 2px solid #666666; 
     margin: auto;
     transform: rotate(133deg);
     translate: (-2px -2px);
     position: absolute;
-    left: -900px;
+    left: -1030px;
     bottom: 300px;
 }
 #section2 .slick-next::after{content: ''; 
     display: block; 
     width:33px; 
     height:33px;
-    border-bottom:2px solid #a7a7a7; 
-    border-right: 2px solid #a7a7a7; 
+    border-bottom:2px solid #666666; 
+    border-right: 2px solid #666666; 
     margin: auto;
     transform: rotate(315deg);
     translate: (-2px -2px);
     position: absolute;
-    right: -300px;
+    right: 0px;
     bottom: 300px;
 }
 
@@ -480,9 +481,11 @@ h2{
     color: #7DC242;
 }
 #section3 .icon_box.flex{
-    justify-content: space-between;
-    margin: 0 260px;
+    justify-content: center;
     padding-top: 160px;
+}
+#section3 .icon_box .icon {
+    padding: 0 68px;
 }
 #section3 .icon_box .icon img{
     width: 134px;
@@ -508,12 +511,14 @@ h2{
 
 /*********************banner****************************/
 #banner {
+    width: 100%;
     margin: 100px 0;
 }
 
 /*********************section4****************************/
 #section4 {
     position: relative;
+    margin: 0 100px;
 }
 #section4::after {
     content: '';
@@ -537,18 +542,81 @@ h2{
     font-size: 1.3rem;
     line-height: 1.5rem;
 }
-#section4 .slider div .img_count .slide_box1{
+#section4 .slider div .img_count .slide_box1 {
     width: 50%;
-    padding-left: 320px;
+    padding-left: 150px;
     padding-top: 200px;
 }
-#section4 .slider div .img_count .slide_box1 p{
-    margin-bottom: 53px;
+#section4 .slider .slick-active div .img_count .slide_box1 h2{
+    transform:translateY(50px);
+    opacity: 0;
+    animation: 4s moving forwards;
+    line-height: 3rem;
+    padding-bottom: 20px;
 }
-#section4 .slider div .img_count .slide_box1 a{
+#section4 .slider .slick-active div .img_count .slide_box1 p{
+    margin-bottom: 53px;
+    transform:translateY(50px);
+    opacity: 0;
+    animation: 4s moving 0.5s forwards;
+}
+#section4 .slider .slick-active div .img_count .slide_box1 a{
+    display: block;
+    width: 85px;
     padding: 10px 30px;
     border: 1px solid #666666;
     border-radius: 50px;
+    transform:translateY(50px);
+    opacity: 0;
+    animation: 4s moving 1s forwards;
+}
+#section4 .slider .slick-active div .img_count img{
+    transform:translateY(50px);
+    opacity: 0;
+    /* margin-right: 50px; */
+    animation: 4s moving 1.5s forwards;
+}
+
+@keyframes moving{
+    0% {opacity: 0; transform:translateY(50px);
+    }
+    100% {opacity: 1; transform: translateY(0px);}
+}
+
+
+
+#section4 .slick-prev{
+    font-size: 0;
+}
+#section4 .slick-prev::after{
+    content: ''; 
+    display: block; 
+    width:33px; 
+    height:33px;
+    border-bottom:2px solid #666666;
+    border-right: 2px solid #666666; 
+    margin: auto;
+    transform: rotate(133deg);
+    translate: (-2px -2px);
+    position: absolute;
+    left: -50px;
+    bottom: 50%;
+}
+#section4 .slick-next{
+    font-size: 0;
+}
+#section4 .slick-next::after{content: ''; 
+    display: block; 
+    width:33px; 
+    height:33px;
+    border-bottom:2px solid #666666; 
+    border-right: 2px solid #666666; 
+    margin: auto;
+    transform: rotate(315deg);
+    translate: (-2px -2px);
+    position: absolute;
+    right: -50px;
+    bottom: 50%;
 }
 
 
@@ -562,35 +630,63 @@ h2{
     background-repeat: no-repeat;
     background-size: cover;
     width: calc(50% - 20px);
-    margin-right: 40px;
+    margin-right: 20px;
 }
 #section5 .employment{
     background-image: url(../images/employment.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     width: calc(50% - 20px);
-    margin-left: 40px;
+    margin-left: 20px;
 }
 #section5 .delivery, #section5 .employment{
-    padding: 183px 0 70px 60px;
+    padding: 126px 0 126px 60px;
 }
+
+
 #section5 h4 {
-    font-size: 2.2rem;
+    font-size: 3rem;
     font-weight: 700;
     color: #ffffff;
     padding-bottom: 32px;
+    transform: translateY(90px);
 }
+#section5 .inner div:hover > h4 {
+    animation: sec_5_h4_hover 2s forwards
+}
+
+@keyframes sec_5_h4_hover{
+    0%{transform: translateY(90px); font-size: ;}
+    100%{transform: translateY(0); font-size: 2.2rem;}
+}
+
 #section5 p{
     color: #ffffff;
     font-weight: 400;
     line-height: 1.5rem;
     padding-bottom: 40px;
+    transform: translateY(5px); opacity: 0;
+}
+#section5 .inner div:hover > p{
+    animation: sec_5_hover 2s 0.8s forwards;
 }
 #section5 a{
     color: #ffffff;
     border: 1px solid #ffffff;
     padding: 11px 30px;
     border-radius: 50px;
+    transform: translateY(5px); opacity: 0;
+    display: block;
+    width: 85px;
+}
+#section5 .inner div:hover > a{
+    animation: sec_5_hover 2s 0.8s forwards;
+}
+
+
+@keyframes sec_5_hover{
+    0%{transform: translateY(5px); opacity: 0;}
+    100%{transform: translateY(0); opacity: 1;}
 }
 
 /*********************footer****************************/
@@ -607,11 +703,18 @@ h2{
 }
 #footer .inner .foot_top .flex{
     justify-content: space-between;
-
+}
+#footer .inner .foot_top > .flex{
+    justify-content: space-between;
+    width: 100%;
+    margin-right: 90px;
 }
 #footer .foot_top .flex .foot_txt1 a{
     margin: 27px 47px;
-    
+}
+#footer .foot_top .flex .foot_txt1 a:hover{
+    color: #006940;
+    font-weight: 700;
 }
 #footer .foot_top .flex .foot_txt1 a:first-child{
     margin-left: 0;
@@ -628,12 +731,16 @@ h2{
     justify-content: center;
     margin: 10px;
 }
+#footer .foot_top .foot_icon a:hover span{
+    background-color: #5FC607;
+}
 #footer .foot_top .foot_icon a span:last-child{
     margin-right: 0;
 }
 #footer .foot_top .foot_icon a img{
     width:30px;
 }
+
 #footer .foot_bottom .foot_txt2{
     padding-top: 40px;
     line-height: 1.3rem;
@@ -644,13 +751,14 @@ h2{
 }
 #footer .foot_bottom .foot_txt3{
     padding-top: 40px;
+    margin-right: 90px;
 }
 #footer .foot_bottom .foot_txt3 h4{
     font-size: 1.3rem;
     font-weight: 700;
     padding-right: 50px;
 }
-#footer .foot_bottom .foot_txt3 div p:first-child{
+#footer .foot_bottom .foot_txt3 div a{
     font-size: 2.2rem;
     font-weight: 700;
     color: #006940;
@@ -660,8 +768,11 @@ h2{
     font-weight: 700;
     padding-right: 13px;
 }
-#footer .foot_bottom .foot_txt3 div p:nth-of-type(2){
-    padding-top: 20px;
+#footer .foot_bottom .foot_txt3 div p{
+    line-height: 1.3rem;
+}
+#footer .foot_bottom .foot_txt3 div p:nth-of-type(1){
+    padding-top: 15px;
 }
 
 /**********************quick_btn************************/
@@ -687,6 +798,7 @@ h2{
     display: flex;
     align-items: center;
     justify-content: center;
+    box-shadow: 3px 3px 5px rgba(0,0,0,0.25);
 }
 #quick_btn .namyangmall .mall_btn img{
     height: 29px;
@@ -704,6 +816,7 @@ h2{
     display: flex;
     align-items: center;
     justify-content: center;
+    box-shadow: 3px 3px 5px rgba(0,0,0,0.25);
 }
 #quick_btn .top_btn{
     background-color: #222222;
@@ -713,6 +826,7 @@ h2{
     border-radius: 50px;
     margin-top: 10px;
     font-size: 0px;
+    box-shadow: 3px 3px 5px rgba(0,0,0,0.25);
 }
 #quick_btn .top_btn::after{
     content: ''; 
@@ -749,6 +863,7 @@ h2{
     top: -530px;
     opacity: 1;
 }
+
 #quick_btn .consulting .consulting_box h4{
     font-size: 1.3rem;
     font-weight: 700;
@@ -806,4 +921,172 @@ h2{
 }
 #quick_btn .namyangi.active .i_on, #quick_btn .namyangmall.active .mall_on{
     display: block;
+}
+
+@media all and (max-width:1570px){
+    /**************section1************/
+    #section1 .sec1_list_pc .sec1_img p {
+        /* color: #ffffff; */
+        font-size: 1rem;
+        /* position: absolute;
+        bottom: 161px;
+        left: 42px;
+        font-weight: 400;
+        opacity: 0; */
+    }
+    /*************section2**************/
+    #section2 .flex .left_tit p {
+        /* padding-top: 39px;
+        line-height: 1.5rem; */
+        font-size: 1.2rem;
+    }
+    #section2 .flex .rigth_txt2 {
+        /* color: #ffffff;
+        text-align: center;*/
+        padding-top: 40px;
+        /* background-color: #7DC242;  */
+        width: 90%;
+        height: 45%;
+        /* display: block;
+        border-top-left-radius: 90px;
+        position: absolute;
+        bottom: -90px;*/
+        right: 200px;
+        /* z-index: 2;  */
+    }
+    
+    #section2 .flex .rigth_txt2 .txt h4 {
+        font-size: 1.9rem;
+        /* font-weight: 700; */
+        /* line-height: 2rem; */
+    }
+    #section2 .flex .rigth_txt2 .txt p {
+        font-size: 1.1rem;
+        padding-top: 20px;
+        line-height: 1.5rem;
+    }
+
+
+    /*******************section4****************/
+    #section4::after {
+        /* content: '';
+        display: block; */
+        width: 850px;
+        height: 850px;
+        /* background-color: #7DC242;
+        border-radius: 50%;
+        z-index: -1;
+        position: absolute;*/
+        right: -200px;
+        top: -300px; 
+    }
+    #section4 > h2 {
+        /* text-align: center; */
+        line-height: 0;
+    }
+ #section4 p {
+        font-size: 1.1rem;
+        /* line-height: 1.5rem; */
+}   
+#section4 .slider .slick-active div .img_count .slide_box1 h2 {
+    /* transform: translateY(50px);
+    opacity: 0;
+    animation: 4s moving forwards; */
+    font-size: 2.5rem;
+    line-height: 3rem;
+    padding-bottom: 20px;
+}
+}
+
+@media all and (max-width:1479px){
+    #section3 .icon_box .icon span {
+        /* background-color: rgba(255, 255, 255, 0.8);
+        border-radius: 50%;
+        display: block; */
+        width: 200px;
+        height: 200px;
+        /* text-align: center; */
+        /* display: flex;
+        align-items: center;
+        justify-content: center; */
+    }
+    #section3 .icon_box .icon img {
+        width: 100px;
+    }
+    #section3 .icon_box .txt {
+        /* text-align: center; */
+        font-size: 1.2rem;
+        line-height: 1.8rem;
+        /* padding-top: 42px;
+        color: #ffffff; */
+    }
+    #section4 > h2 {
+        /* text-align: center;
+        line-height: 0; */
+        font-size: 2.3rem;
+    }
+    #section4::after {
+        /* content: '';
+        display: block; */
+        width: 900px;
+        height: 900px;
+        /* background-color: #7DC242;
+        border-radius: 50%;
+        z-index: -1;
+        position: absolute;*/
+        right: -250px;
+        top: -350px; 
+    }
+    #section4 .slider div .img_count .slide_box1 {
+        /* width: 100%; */
+        padding-left: 100px;
+        /* padding-top: 200px; */
+    }
+    #section4 p {
+        font-size: 1rem;
+        /* line-height: 1.5rem; */
+    }
+    #section4 .slider .slick-active div .img_count img {
+        /* transform: translateY(50px);
+        opacity: 0; */
+        margin-right: -100px;
+        /* animation: 4s moving 1.5s forwards; */
+        width: 70%;
+        height: 70%;
+    }
+    #section4 .slick-prev::after {
+        content: '';
+        display: block;
+        width: 33px;
+        height: 33px;
+        border-bottom: 2px solid #666666;
+        border-right: 2px solid #666666;
+        margin: auto;
+        transform: rotate(133deg);
+        translate: (-2px -2px);
+        position: absolute;
+        left: -50px;
+        bottom: 50%;
+    }
+    #section4 .slick-next::after {
+        content: '';
+        display: block;
+        width: 33px;
+        height: 33px;
+        border-bottom: 2px solid #666666;
+        border-right: 2px solid #666666;
+        margin: auto;
+        transform: rotate(315deg);
+        translate: (-2px -2px);
+        position: absolute;
+        right: -50px;
+        bottom: 50%;
+    }
+    #section4 .lazy div .img_count.flex{
+        justify-content: space-between;
+    }
+}
+
+@media all and (max-width:767px){
+
 }
