--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,6 @@ h2{
     font-size: 2.7rem;
     font-weight: 700;
     line-height: 5rem;}
-
-#wrap{/*position: relative;*/}
 #header{}
 #section{}
 #footer{}
@@ -201,6 +199,14 @@ h2{
 #header.scroll{
     background-color: #ffffff; 
     height: 128px;transition: top 0.5s;
+    z-index: 10;
+    position: fixed;
+}
+#header.scroll .gnb > li > a {
+    color: #222222;
+}
+#header.scroll .language .btn_lang{
+    color: #222222;
 }
 
 
@@ -355,6 +361,7 @@ h2{
     0% {opacity: 0; bottom: 140px;}
     100% {opacity: 1; bottom: 161px;}
 }
+
 
 
 /*********************section2****************************/
@@ -514,6 +521,9 @@ h2{
     width: 100%;
     margin: 100px 0;
 }
+#banner img{
+    width: 100%;
+}
 
 /*********************section4****************************/
 #section4 {
@@ -575,6 +585,7 @@ h2{
     opacity: 0;
     /* margin-right: 50px; */
     animation: 4s moving 1.5s forwards;
+    width: 100%;
 }
 
 @keyframes moving{
@@ -780,6 +791,7 @@ h2{
     position: fixed;
     right: 48px;
     bottom: 40px;
+    z-index: 100;
 }
 #quick_btn div button{
     display: block;
@@ -999,6 +1011,75 @@ h2{
 }
 
 @media all and (max-width:1479px){
+    #section2 .flex {
+        justify-content: space-between;
+        padding-top: 100px;
+        margin: 0 100px;
+        position: relative;
+    }
+    #section2 .flex .rigth_txt {
+        position: relative;
+        width: 40%;
+        right: -74px;
+        padding-top: 41px;
+    }
+    #section2 .flex .rigth_txt2 {
+        padding-top: 20px;
+        /* background-color: #7DC242;  */
+        width: 100%;
+        height: 30%;
+        right: 0px;
+        /* z-index: 2; */
+        bottom: 23px;
+    }
+    
+    #section2 .flex .rigth_txt2 .txt h4 {
+        font-size: 1.5rem;
+        /* font-weight: 700; */
+        line-height: 1.8rem;
+        padding-top: 25px;
+    }
+    #section2 .flex .rigth_txt2 .txt p {
+        /* font-size: 1.1rem;
+        padding-top: 20px;
+        line-height: 1.5rem; */
+        display: none;
+    }
+    #section2 .flex .rigth_txt .img_count img {
+        width: 100%;
+        overflow: hidden;
+    }
+    #section2 .slick-next::after {
+        /* content: '';
+        display: block;
+        width: 33px;
+        height: 33px;
+        border-bottom: 2px solid #666666;
+        border-right: 2px solid #666666;
+        margin: auto;
+        transform: rotate(315deg);
+        translate: (-2px -2px);
+        position: absolute; */
+        right: -115px;
+        bottom: 45%;
+    }
+    #section2 .slick-prev::after {
+        /* content: '';
+        display: block;
+        width: 33px;
+        height: 33px;
+        border-bottom: 2px solid #666666;
+        border-right: 2px solid #666666;
+        margin: auto;
+        transform: rotate(133deg);
+        translate: (-2px -2px);
+        position: absolute;
+        left: -1030px; */
+        bottom: 45%;
+    }
+
+
+
     #section3 .icon_box .icon span {
         /* background-color: rgba(255, 255, 255, 0.8);
         border-radius: 50%;
@@ -1084,6 +1165,30 @@ h2{
     }
     #section4 .lazy div .img_count.flex{
         justify-content: space-between;
+    }
+    #footer .foot_bottom .foot_txt3 h4 {
+        font-size: 1.2rem;
+        /* font-weight: 700;
+        padding-right: 50px; */
+    }
+    #footer .foot_top .flex .foot_txt1 a {
+        margin: 27px 20px;
+    }
+    
+}
+
+@media all and (max-width:1207px){
+    #section3 .icon_box.flex {
+        justify-content: inherit;
+        /* padding-top: 160px; */
+        display: block;
+    }
+    #section3 .icon_box .icon {
+        padding: 0 68px;
+        margin: 0 auto;
+        text-align: center;
+        align-items: center;
+        display: block;
     }
 }
 
